completed the application logic, worked on adjusting the view for mobiles

--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
             <h1>Choose a player</h1>
             <div class="charapter" id="cpt-america" 
                 data-health-points="150" 
-                data-attack-power="8"
-                data-counter-attack-power="10">
+                data-attack-power="9"
+                data-counter-attack-power="20">
                 <img src="images/america.png" alt="Captain America" />
                 <div class="badge">Captain America</div>
                 <div id="health-points" class="badge badge-info">150</div>
             </div>
             <div class="charapter" id="ironman"
-                data-health-points="110" 
+                data-health-points="160" 
                 data-attack-power="8"
-                data-counter-attack-power="10">
+                data-counter-attack-power="17">
                 <img  src="images/ironman.png" alt="Ironman" />
                 <div class="badge">Ironman</div>
                 <div id="health-points" class="badge badge-info">110</div>
             </div>
             <div class="charapter" id="hulk"
                 data-health-points="200" 
-                data-attack-power="8"
+                data-attack-power="6"
                 data-counter-attack-power="10">
                 <img  src="images/hulk.png" alt="Hulk" />
                 <div class="badge">Hulk</div>
                 <div id="health-points" class="badge badge-info">200</div>
             </div>            
             <div class="charapter" id="thor"
-                data-health-points="200" 
-                data-attack-power="8"
-                data-counter-attack-power="10">
+                data-health-points="180" 
+                data-attack-power="7"
+                data-counter-attack-power="12">
                 <img  src="images/thor.png" alt="Thor" />
-                <div class="badge">thor</div>
+                <div class="badge">Thor</div>
                 <div id="health-points" class="badge badge-info">200</div>
             </div>
         </div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-12">
                     <h1>Enemies</h1>
                     <div id="enemies-area"></div>
                 </div>
