game completed, UI changes for movile done.

--- a/index.html
+++ b/index.html
@@ -16,37 +16,41 @@
     <div class="container">
         <div id="chose-area">
             <h1>Choose a player</h1>
-            <div class="charapter" id="cpt-america" 
+            <div class="charapter" id="cpt-america"
+                data-name="Captain America" 
                 data-health-points="150" 
                 data-attack-power="9"
                 data-counter-attack-power="20">
                 <img src="images/america.png" alt="Captain America" />
-                <div class="badge">Captain America</div>
-                <div id="health-points" class="badge badge-info">150</div>
+                <div class="inline"><span class="badge">Captain America</span></div>
+                <div class="inline"><span id="health-points" class="badge badge-info">150</span></div>
             </div>
             <div class="charapter" id="ironman"
+                data-name="Ironman" 
                 data-health-points="160" 
                 data-attack-power="8"
                 data-counter-attack-power="17">
                 <img  src="images/ironman.png" alt="Ironman" />
-                <div class="badge">Ironman</div>
-                <div id="health-points" class="badge badge-info">110</div>
+                <div class="inline"><span class="badge">Ironman</span></div>
+                <div class="inline"><span id="health-points" class="badge badge-info">110</span></div>
             </div>
             <div class="charapter" id="hulk"
+                data-name="Hulk" 
                 data-health-points="200" 
                 data-attack-power="6"
                 data-counter-attack-power="10">
                 <img  src="images/hulk.png" alt="Hulk" />
-                <div class="badge">Hulk</div>
-                <div id="health-points" class="badge badge-info">200</div>
+                <div class="inline"><span class="badge">Hulk</span></div>
+                <div class="inline"><span id="health-points" class="badge badge-info">200</span></div>
             </div>            
             <div class="charapter" id="thor"
+                data-name="Thor" 
                 data-health-points="180" 
                 data-attack-power="7"
                 data-counter-attack-power="12">
                 <img  src="images/thor.png" alt="Thor" />
-                <div class="badge">Thor</div>
-                <div id="health-points" class="badge badge-info">200</div>
+                <div class="inline"><span class="badge">Thor</span></div>
+                <div class="inline"><span id="health-points" class="badge badge-info">200</span></div>
             </div>
         </div>
         <main>
@@ -71,7 +75,7 @@
             </div>
         </main>
         <footer class="row justify-content-md-center">
-            <div id="log" class="col-sm-4"></div>
+            <div id="log" class="col-sm-6"></div>
             <div class="col-sm-12">
                 <button id="resetGame"class="btn btn-dark">Reset</button>
             </div>
