fixed link to image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 data-health-points="150" 
                 data-attack-power="9"
                 data-counter-attack-power="20">
-                <img src="images/america.png" alt="Captain America" />
+                <img src="images/cptamerica.png" alt="Captain America" />
                 <div class="inline"><span class="badge">Captain America</span></div>
                 <div class="inline"><span id="health-points" class="badge badge-info">150</span></div>
             </div>
